# dl-hw-mfti-2

./: README.md  main.ipynb  pyproject.toml
