[tool.poetry]
name = "dl-hw-mfti-2"
version = "0.1.0"
description = ""
authors = ["anastasiyachumakova <chumana.mmrx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.26.4"
tensorflow = "^2.16.1"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
